fixed text alignment and padding

--- a/sass/modules/_tables.sass
+++ b/sass/modules/_tables.sass
@@ -15,6 +15,7 @@ table
             height: 3em
             padding: 8px
             line-height: 3
+            text-align: left
             a
                 color: $c-basic-link-light
                 text-decoration: none
@@ -32,7 +33,7 @@ table
         tr:last-child td
             border: none
         td
-            padding: 4px
+            padding: 4px 8px
             text-align: center
             border-bottom: 1px solid #e0e0e0
 
